# Airbus-SEN-Examples

FLIGHTSIM_SEN_ADAPTER_Sample/: CMakeLists.txt  Comm_Architecure - Simple.txt  master_node.py  monitor_node.py  pcs_node.py  se_node.py  simulation_interface.yaml
FLIGHTSIM_SEN_ADAPTER_Sample/src/: simulation_interface.cpp  simulation_interface.h
FLIGHTSIM_SEN_ADAPTER_Sample/stl/sim_interface/: simulation_interface.stl
